--- a/popup.css
+++ b/popup.css
@@ -54,7 +54,10 @@ body{
   background-color: #676767;
   
 }
-#options a{
+#options:hover{
+  cursor: pointer;
+}
+#options p{
   display: flex;
   align-content: center;
   justify-content: center;
